# keystone

./: .gitignore  CHANGELOG.md  LICENSE  MUJOCO_LOG.TXT  README.md  pyproject.toml  scratchpad_run3.py  scratchpad_runs12.py
bench/: __init__.py  common.py  parity_cra.py  search_perf.py  throughput.py
docs/: KNOWN_LIMITS.md  MATH_REFERENCE.md
examples/: az_overhang.py  certify_overhang.py  franka_build.py  material_sweep.py  mujoco_falsework.py  mujoco_insert.py  mujoco_rideunder.py  mujoco_shim.py  mujoco_validate.py  overhang3d_demo.py  pipeline_stack.py  replay_steps.py  robust_sweep.py  search_overhang.py  search_overhang_fast.py  stack2d.py  tower3d.py
src/keystone/: __init__.py  pipeline.py  viz.py
src/keystone/geometry/: __init__.py  assembly.py  boxes.py  interfaces.py  tolerances.py
src/keystone/interop/: __init__.py  franka_scene.py  movies.py  mujoco_io.py
src/keystone/mechanics/: __init__.py  assemble.py  cones.py  loads.py
src/keystone/search/: __init__.py  az.py  bnb.py  lattice.py  lattice3d.py  mcts.py
src/keystone/solve/: __init__.py  batch_jax.py  exact.py  options.py  pdhg.py  result.py
tests/analytic/: test_bnb_optima.py  test_gates_2d.py  test_gates_3d.py  test_overhang_regression.py
tests/property/: test_invariants.py
tests/unit/: test_assemble.py  test_az.py  test_certificates.py  test_franka_scene.py  test_geometry.py  test_mujoco_io.py  test_pdhg.py  test_pipeline.py  test_search_lattice.py  test_search_lattice3d.py  test_solve_synthetic.py  test_viz_smoke.py
